add pug template

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	"dependencies": {
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
-		"mongoose": "^5.9.17"
+		"mongoose": "^5.9.17",
+		"pug": "^3.0.0"
 	}
 }
