--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
 	},
 	"homepage": "https://github.com/sandeep-chahal/bookstore-nodejs#readme",
 	"dependencies": {
+		"bcryptjs": "^2.4.3",
+		"cookie-parser": "^1.4.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.9.17",
 		"pug": "^3.0.0"
 	}
