--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"cookie-parser": "^1.4.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"express-validator": "^6.5.0",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.9.17",
 		"pug": "^3.0.0"
