--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"express-validator": "^6.5.0",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.9.17",
+		"multer": "^1.4.2",
 		"pug": "^3.0.0"
 	}
 }
