--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.9.17",
 		"multer": "^1.4.2",
-		"pug": "^3.0.0"
+		"pug": "^3.0.0",
+		"stripe": "^8.61.0"
 	}
 }
