--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "./app.js",
 	"scripts": {
 		"start:dev": "nodemon app.js",
-		"start:prod": "node app.js"
+		"start": "node app.js"
 	},
 	"repository": {
 		"type": "git",
